Adjusted styles and html to better reflect the given design. In process: bug fix where collapsing of answers works only on first QnA

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -76,10 +76,11 @@ body {
   background-color: $white;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
-  height: 740px;
-  padding: 40px;
+  min-height: 400px;
+  height: auto;
+  padding: 40px 40px 20px 40px;
   border-radius: 20px;
 }
 
@@ -99,6 +100,10 @@ body {
   font-weight: bold;
 }
 
+.accordion-body {
+  width: 100%;
+}
+
 .qna {
   border-bottom: 1px solid $lightPink;
   margin-top: 10px;
@@ -116,7 +121,6 @@ body {
   color: $darkPurple;
   margin-bottom: 10px;
   button {
-    // font-family: Work-Sans;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -125,7 +129,6 @@ body {
     outline: none;
     background: none;
     border: none;
-    // width: 100%;
     height: 100%;
     text-align: left;
     flex: 1;
